--- a/Lab4/server/shared-template.yaml
+++ b/Lab4/server/shared-template.yaml
@@ -44,7 +44,7 @@ Resources:
     Properties:
       Location: nested_templates/userinterface.yaml
       Parameters:
-        EventEngineParameter: !Ref EventEngineParameter
+        IsCloudFrontAndS3PreProvisioned: !Ref EventEngineParameter
       
   Cognito:
     Type: AWS::Serverless::Application
