--- a/Lab1/server/template.yaml
+++ b/Lab1/server/template.yaml
@@ -10,7 +10,7 @@ Globals:
   Function:
     Timeout: 29
     Layers:
-      - !Sub "arn:aws:lambda:${AWS::Region}:580247275435:layer:LambdaInsightsExtension:14"
+      - !Sub "arn:aws:lambda:${AWS::Region}:580247275435:layer:LambdaInsightsExtension-Arm64:1"
     Environment:
         Variables:
           LOG_LEVEL: DEBUG                   
